tests/neg/companion-scope-inference-no-import.check
-- [E006] Not Found Error: tests/neg/companion-scope-inference-no-import.scala:10:17 -----------------------------------
10 |  val c: Color = Red // error
   |                 ^^^
   |                 Not found: Red
   |
   | longer explanation available when compiling with `-explain`
